--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+section {
+    width: 70%;
+    /* Sets top and bottom margin to 20px. Auto will center element */
+    margin: 20px auto;
+    border-bottom: 5px solid darkblue;
+    background-color: #ffffd4;
+}
+.row {
+    display: flex; 
+    flex-direction: row;
+    flex-wrap:wrap;
 
+}
